--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Saisunil Sridharan - Resume</title>
     <link rel="stylesheet" href="modern-style.css">
     <link rel="stylesheet" href="timeline.css">
+    <link rel="stylesheet" href="certificates.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -24,6 +25,7 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="#certificates">Certificates</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="SAISUNIL SRIDHARAN.docx" download><i class="fas fa-download"></i> Download Resume</a></li>
         </ul>
@@ -45,7 +47,9 @@
     <!-- About Section -->
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>A visionary programmer, I merge expertise and innovation to transform tech and business, aspiring for excellence and impactful career advancements.</p>
+        <p>As a Full Stack Engineer at eMudhra, I am passionate about developing and deploying innovative solutions for public key infrastructure (PKI) and cybersecurity, using cutting-edge technologies such as post-quantum cryptography. I work with a diverse and talented team of engineers, researchers, and managers to deliver high-quality products and services that meet the needs and expectations of our clients and partners.
+
+            With a Bachelor of Engineering degree in Computer Science from Ganadipathy Tulsi's Engineering College, I have a strong foundation and interest in programming, data structures, algorithms, and cryptography. I have also acquired multiple skills in project management, web development, database design, and cloud computing, through various courses, projects, and internships. I am always eager to learn new things, challenge myself, and improve my abilities. My goal is to leverage my skills and experience to create positive social and economic impact through technology.</p>
     </section>
 
     <!-- Experience Section -->
@@ -444,6 +448,51 @@
     </section>
 
     <!-- Contact Section -->
+    <section id="certificates" class="certificates">
+        <h2>Certificates and Courses</h2>
+        <div class="certificate-grid">
+            <div class="certificate-item">
+                <h3>Atlassian Agile Project Management Professional Certificate</h3>
+                <p>Certificate issued by LinkedIn and Atlassian</p>
+                <div class="certificate-links">
+                    <a href="https://www.linkedin.com/learning/certificates/d2977bda3a5e4e31ccfa1e122655e19d74a426f5f2e7214b730746a65f121ce4" target="_blank" class="certificate-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+            </div>
+
+            <div class="certificate-item">
+                <h3>CompTIA Security+</h3>
+                <p>Certificate issued by cybrary.it</p>
+                <div class="certificate-links">
+                    <a href="https://app.cybrary.it/profile/SaisunilSridharan?tab=cert-completion&cert=CC-c3838833-7e12-4881-a4af-2be28d63af47" target="_blank" class="certificate-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+            </div>
+
+            <div class="certificate-item">
+                <h3>Chief Information Security Officer (CISO)</h3>
+                <p>Certificate issued by cybrary.it</p>
+                <div class="certificate-links">
+                    <a href="https://app.cybrary.it/profile/SaisunilSridharan?tab=cert-completion&cert=CC-c3838833-7e12-4881-a4af-2be28d63af47" target="_blank" class="certificate-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+            </div>
+
+            <div class="certificate-item">
+                <h3>Computer Hacking and Forensics</h3>
+                <p>Certificate issued by cybrary.it</p>
+                <div class="certificate-links">
+                    <a href="https://app.cybrary.it/profile/SaisunilSridharan?tab=cert-completion&cert=CC-c3838833-7e12-4881-a4af-2be28d63af47" target="_blank" class="certificate-link">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
         <div class="contact-info">
